<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.smartfaqai.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_homeFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.smartfaqai.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.smartfaqai.ui.favorites.FavoritesFragment"
        android:label="@string/nav_favorites" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.smartfaqai.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.smartfaqai.ui.chat.ChatFragment"
        android:label="@string/app_name">
        <argument
            android:name="question"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="category"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="conversationId"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.smartfaqai.ui.category.CategoryFragment"
        android:label="@string/categories">
        <argument
            android:name="category"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_categoryFragment_to_faqDetailFragment"
            app:destination="@id/faqDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/faqDetailFragment"
        android:name="com.example.smartfaqai.ui.category.FaqDetailFragment"
        android:label="@string/full_answer">
        <argument
            android:name="faqId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
</navigation>
